# odoo_mcp

./: .env.example  README.md  cursor-mcp-config.example.json  pyproject.toml
docs/: TEAM_ROLLOUT.md
odoo_mcp/: __init__.py  __main__.py  client.py  doctor.py  server.py
